Header component created and updated CSS

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
+<app-header></app-header>
 <div class="container mx-auto">
   <h1>Hello {{ title }}</h1>
   <button class="btn btn-primary" (click)="changeTitle()">Change Title</button>
