--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <app-header></app-header>
 <div class="container mx-auto">
   <h1>Hello {{ title }}</h1>
-  <button class="btn btn-primary" (click)="changeTitle()">Change Title</button>
+  <button class="btn btn-primary" (click)="changeTitle()">Change Name</button>
   <hr>
   <div class="card">
     <div class="card-body text-center">
