--- a/src/app/common/header/header.component.html
+++ b/src/app/common/header/header.component.html
@@ -1,8 +1,9 @@
 <div class="header">
     <h1>eCommerce</h1>
     <ul>
-        <li> <a href="">Home</a></li>
-        <li> <a href="">About</a></li>
-        <li> <a href="">Contact</a></li>
+        <li> <a href="/">Home</a></li>
+        <li> <a href="/about">About</a></li>
+        <li> <a href="/contact">Contact</a></li>
+        <li> <a href="/products">Products</a></li>
     </ul>
 </div>
